--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
-    "react-type-animation": "^3.1.0"
+    "react-type-animation": "^3.1.0",
+    "swiper": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
